[tool.poetry]
name = "shape-challenge"
version = "0.1.0"
description = ""
authors = ["aninhasalesp <aninha.sales58@hotmail.com>"]
readme = "README.md"
packages = [{include = "shape_challenge"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
pyspark = {extras = ["connect"], version = "^3.5.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
