[tool.poetry]
name = "shape-challenge"
version = "0.1.0"
description = ""
authors = ["aninhasalesp <aninha.sales58@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
pyspark = {extras = ["connect"], version = "^3.5.0"}
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
black = "^23.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
